# open-pacmuci

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  Makefile  README.md  codecov.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docker.yml  docs.yml  release.yml  test.yml
.planning/: 2026-04-07-review-improvements-design.md  BENCHMARK_RESULTS.md  REVIEW_2026-04-07.md  TESTING_WITH_MUCONEUP.md  phase3-code-quality-plan.md
.planning/archive/: 2026-04-06-open-pacmuci-design.md  2026-04-07-platform-support-design.md  2026-04-07-platform-support-plan.md  ISSUES_1_2_3_EXECUTION_PLAN.md  ISSUES_1_2_3_PLAN.md  PLAN.md  phase1-quick-wins-plan.md  phase2-reproducibility-plan.md  phase4-features-plan.md
conda/: environment-dev.yml  environment.yml
docker/: Dockerfile  open-pacmuci.def
docs/: index.md
docs/about/: changelog.md  citation.md  license.md
docs/getting-started/: concepts.md  deviations.md  installation.md  quickstart.md
docs/guides/: benchmarking.md
docs/includes/: abbreviations.md
docs/reference/: cli.md  limitations.md  mutations.md  nomenclature.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-04-06-open-pacmuci.md
scripts/: batch_analyze.py  benchmark.py  build_reference.py  generate_testdata.py  validate_catalog.py
src/open_pacmuci/: __init__.py  alleles.py  calling.py  classify.py  cli.py  config.py  consensus.py  ladder.py  mapping.py  report.py  tools.py  vcf.py  version.py
src/open_pacmuci/data/reference/: reference_ladder.fa
src/open_pacmuci/data/repeats/: repeats.json
src/open_pacmuci/templates/: report.html.j2
tests/: conftest.py
tests/integration/: test_calling.py  test_consensus.py  test_mapping.py  test_pipeline.py
tests/unit/: test_alleles.py  test_calling.py  test_classify.py  test_cli.py  test_config.py  test_consensus.py  test_ladder.py  test_mapping.py  test_report.py  test_tools.py  test_vcf.py
