[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-pacmuci"
dynamic = ["version"]
description = "Open-source MUC1 VNTR analysis pipeline for PacBio HiFi amplicon data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Bernt Popp", email = "bernt.popp.md@gmail.com"},
]
keywords = ["bioinformatics", "genomics", "MUC1", "VNTR", "PacBio", "HiFi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "click>=8.1.0,<9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff==0.15.9",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-click>=0.8.0",
]

[project.scripts]
open-pacmuci = "open_pacmuci.cli:main"

[project.urls]
Homepage = "https://github.com/berntpopp/open-pacmuci"
Documentation = "https://berntpopp.github.io/open-pacmuci/"
Repository = "https://github.com/berntpopp/open-pacmuci"
Issues = "https://github.com/berntpopp/open-pacmuci/issues"

[tool.hatch.version]
path = "src/open_pacmuci/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/open_pacmuci"]

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4
exclude = [
    ".git", ".mypy_cache", ".pytest_cache", ".ruff_cache",
    "__pycache__", "build", "dist", "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E", "W", "F", "UP", "B", "SIM", "I", "N", "C4", "PTH", "RUF",
]
ignore = [
    "E501",
    "B008",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG", "PLR2004"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["open_pacmuci"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=open_pacmuci",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: pure Python tests (fast, no external tools)",
    "integration: tests requiring bioinformatics tools (conda env)",
    "e2e: end-to-end pipeline tests with MucOneUp test data",
]

[tool.coverage.run]
source = ["open_pacmuci"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
